# ECE569_Project

./: .gitignore  README.md  alternate_gaussian.cu  optimized_original.cu
HOG-Feature/: CMakeLists.txt  README  build.sh  run.sh  svm.yml  train_HOG.cpp
HOG-Feature/HOG/: CMakeLists.txt  main.cu
cuda/: CMakeLists.txt  README  build.sh  run.sh
cuda/BGS/: CMakeLists.txt  cuda_kernels.cu  cuda_kernels_old.cu  hog.cu  main.cpp  optimized_gaussian_background.cu  optimized_gaussian_filter_new_method.cu  optimized_seperable_old_optimized.cu
serial_and_tbb/: DualSGM.cpp
video_converter/: README.md  video_converter.py
